--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,6 +6,13 @@ pipeline {
     }
   }
   stages {
+
+    stage('Clean Workspace') {
+  steps {
+    deleteDir()  // This clears the entire workspace safely
+  }
+    }
+
     stage('Checkout') {
       steps {
         sh 'echo passed'
